<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniGames</string>

    <string name="title_activity_scrolling_bg">Scrolling background Activity</string>
    <string name="title_activity_platform">Platform Activity</string>
    <string name="title_activity_td">Tower Defense Activity</string>

    <string name="fps_10">Run at 10 ftp</string>
    <string name="fps_20">Run at 20 ftp</string>
    <string name="fps_30">Run at 30 ftp</string>
    <string name="fps_40">Run at 40 ftp</string>
    <string name="fps_60">Run at 60 ftp</string>
    <string name="fps_100">Run at 100 ftp</string>
    <string name="hello_world">Hello world!</string>

    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="sign_in_explanation">Sign with Google to upload your achievements and share with friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign Out</string>

</resources>
