<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
                android:id="@+id/btn_scrolling_bg"
                android:text="@string/title_activity_scrolling_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <Button
                android:id="@+id/btn_platform"
                android:text="@string/title_activity_platform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <Button
                android:id="@+id/btn_tower_defense"
                android:text="@string/title_activity_td"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- SIGN-IN BAR -->
    <LinearLayout
            android:id="@+id/sign_in_bar"
            style="@style/SignInOutBar">

        <com.google.android.gms.common.SignInButton
                android:id="@+id/button_sign_in"
                style="@style/SignInButton" />

        <TextView
                style="@style/SignInOutBarBlurb"
                android:text="@string/sign_in_explanation" />
    </LinearLayout>

    <!-- SIGN-OUT BAR -->
    <LinearLayout
            android:id="@+id/sign_out_bar"
            style="@style/SignInOutBar"
            android:visibility="gone">

        <TextView
                style="@style/SignInOutBarBlurb"
                android:text="@string/you_are_signed_in" />

        <Button
                style="@style/SignOutButton"
                android:id="@+id/button_sign_out"
                android:text="@string/sign_out" />

    </LinearLayout>
</LinearLayout>
